--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@ layout: portfolio_jing
 {% for post in site.categories['portfolio'] %}
      	<li class="portfolio-item" style="background-image:url({{ post.cover }});background-size: 100%">
      		<!--- <a href="{{ post.url | prepend: site.baseurl }}"><img class="portfolio-cover" src="{{ post.cover }}"></a>  -->
- 			<div id="portfolio-btn"><button class="portfolio-btn"><a href="{{ post.url | prepend: site.baseurl }}">Go to the {{ post.title }}  |  {{ post.type }} </a></button></div>
+ 			<div id="portfolio-btn"><a class="portfolio-btn" href="{{ post.url | prepend: site.baseurl }}">Go to the {{ post.title }}  |  {{ post.type }} </a></div>
       	</li>
 {% endfor %}
 	 </ul>
